--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
+spring.application.name=master_article
 
-## PostgreSQL
-spring.datasource.url=jdbc:postgresql://172.28.4.117:5444/pdadb
-spring.datasource.username=pda
-spring.datasource.password=pda
+spring.datasource.postgres.url=jdbc:postgresql://172.28.4.117:5444/pdadb
+spring.datasource.postgres.username=pda
+spring.datasource.postgres.password=pda
+spring.datasource.postgres.hikari.maximumPoolSize=20
+spring.datasource.postgres.hikari.idleTimeout=300000
 
-# server.servlet.context-path=/api
-spring.application.name=master_article_backend
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=ture
+
+
+
+server.servlet.context-path=/api
