upgrade api master_article

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,8 +9,17 @@ spring.datasource.hikari.postgres.hikari.idleTimeout=300000
 spring.datasource.hikari.oracle.url=jdbc:oracle:thin:@10.5.5.169:1521:TPXSIT
 spring.datasource.hikari.oracle.username=GCENPRD
 spring.datasource.hikari.oracle.password=GCENSIT
-spring.datasource.hikari.oracle.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.hikari.oracle.max-active=2000
+spring.datasource.hikari.oracle.hikari.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.hikari.oracle.hikari.minimum-idle=10
+spring.datasource.hikari.oracle.hikari.maximum-pool-size=15
+spring.datasource.hikari.oracle.hikari.connection-timeout=600000
+spring.datasource.hikari.oracle.hikari.idle-timeout=600000
+spring.datasource.hikari.oracle.hikari.max-lifetime=1800000
+spring.datasource.hikari.oracle.hikari.pool-name=GOLD-HikariCP
+spring.datasource.hikari.oracle.hikari.auto-commit=true
+spring.datasource.hikari.oracle.hikari.connection-test-query=SELECT 1 FROM DUAL
+# spring.datasource.hikari.oracle.hikari.type=com.zaxxer.hikari.HikariDataSource
+# spring.datasource.hikari.oracle.hikari.transaction-isolation=TRANSACTION_READ_UNCOMMITTED
 
 
 spring.jpa.properties.hibernate.show_sql=true
