--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,10 +16,7 @@ spring.datasource.hikari.oracle.hikari.connection-test-query=SELECT 1 FROM DUAL
 # spring.datasource.hikari.oracle.hikari.type=com.zaxxer.hikari.HikariDataSource
 # spring.datasource.hikari.oracle.hikari.transaction-isolation=TRANSACTION_READ_UNCOMMITTED
 
-
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=ture
 
-
-
-server.servlet.context-path=/api
+server.servlet.context-path=/master-article
